# technical_writing_crewai

./: .env.example  .gitignore  README.md  article_queue.json  outline_template.txt  pyproject.toml  writing_sample.txt
knowledge/: user_preference.txt
src/building_an_ai_writing_workflow_from_research_to_publication/: crew.py  main.py
src/building_an_ai_writing_workflow_from_research_to_publication/config/: agents.yaml  tasks.yaml
src/building_an_ai_writing_workflow_from_research_to_publication/tools/: tavily_search.py
